--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="alter_ego">Alter Ego</string>
     <string name="short_bio">Short Bio</string>
     <string name="power_string">Power</string>
+    <string name="save_string">Save</string>
 </resources>
